# mail

./: .env.local.txt  .eslint.config.ts  .eslintrc  .gitignore  .prettierrc  LICENSE  README.md  _redirects  bun.lockb  components.json  eslint.config.js  hoagieui.sh  middleware.ts  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package-lock.json.orig  package.json  package.json.orig  proxy.ts  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: lint.yml
app/: Content.tsx  globals.css  hoagie.tsx  index.tsx  layout.tsx  mail.css  page.tsx  quill.snow.css
app/api/auth/[...auth0]/: route.ts  router.ts
app/api/hoagie/[...path]/: route.ts
app/app/: page.tsx
app/digest/: page.tsx
app/scheduled/: page.tsx
app/send/: page.tsx
backend/: .env.example  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/hoagiemail/: apps.py
backend/hoagiemail/api/: limiter.py  mail_view.py  scheduled_mail_view.py  send_mail_view.py  stuff_posts_view.py  stuff_user_view.py
backend/hoagiemail/api/auth/: auth.py
backend/hoagiemail/api/mail/: mailjet_client.py
backend/hoagiemail/api/views/: mail_view.py  stuff_posts_view.py
backend/hoagiemail/email/: limiter.py  mailjet_client.py  sanitize.py
backend/hoagiemail/migrations/: 0001_initial.py  0002_populate_categories_tags.py  0003_userlimits.py
backend/hoagiemail/models/: __init__.py  mail.py  stuff.py  user.py
components/: Editor.tsx  ErrorMessage.tsx  Footer.tsx  LostFound.tsx  Mail.tsx  MailForm.tsx  MailFormedit.tsx  QuillJSEditor.tsx  RichSunEditor.tsx  RichTextEditor.tsx  StartPage.tsx  View.tsx  quilljs.css
components/MailForm/: DigestForm.tsx  ExistingDigest.tsx  ScheduleSelectField.tsx  SendForm.tsx  SuccessPage.tsx  index.tsx
components/MailForm/DigestForm/: Forms.tsx  index.tsx
components/MailForm/ScheduledSend/: ScheduleSelectField.tsx  ScheduledMailForm.tsx  ScheduledMailPane.tsx  formatDateString.ts
components/ui/: sonner.tsx
lib/: auth0.ts
lib/hoagie-ui/: theme.css
lib/hoagie-ui/AuthButton/: Readme.md  index.tsx
lib/hoagie-ui/Footer/: Readme.md  index.tsx
lib/hoagie-ui/Layout/: index.tsx
lib/hoagie-ui/Nav/: Readme.md  index.tsx
lib/hoagie-ui/ProfileCard/: Readme.md  index.tsx
lib/hoagie-ui/Theme/: Button.tsx  Readme.md  Tab.tsx  Theme.module.css  index.tsx  themes.tsx
mock/: User.tsx
pages/: _app.js  _app.tsx  app.tsx  digest.tsx  index.js  index.tsx  lostfound.tsx  mail.css  mail.tsx  scheduled.tsx  send.tsx  startpage.tsx
pages/api/auth/: [...auth0].js  [...auth0].tsx
pages/api/hoagie/: [...path].tsx  [...query].tsx
pages/api/mail/: send.tsx
pages/app/: index.tsx
pages/mail/: index.tsx  mail.tsx
src/everpurple/: AuthButton.tsx  Everpurple.tsx  Layout.tsx  Nav.tsx  style.css
